# pixel

./: .gitignore  README.md  kano_pixel_kit_firmware.ino  pixel.ino
doc/: Doxyfile
scripts/pixel/: setup.bash
src/applications/: application.cpp  application.h  brightness.cpp  brightness.h  buttons_test.cpp  buttons_test.h  launchpad.cpp  launchpad.h  point.cpp  point.h  restart.cpp  restart.h
src/buttons/: buttons.cpp  buttons.h
src/devices/: esp32.h  neopixel.h
src/display/: display.cpp  display.h
src/logger/: logger.cpp  logger.h
src/pixel/: CMakeLists.txt
src/pixel/application/: CMakeLists.txt  application.cpp  application.h  brightness.cpp  brightness.h  launchpad.cpp  launchpad.h  point.cpp  point.h  restart.cpp  restart.h
src/pixel/applications/: CMakeLists.txt  launchpad.h  point.cpp  point.h  restart.cpp  restart.h
src/pixel/button/: CMakeLists.txt  button.cpp  button.h  button_state.h
src/pixel/buttons/: CMakeLists.txt  buttons.cpp  buttons.h
src/pixel/common/: CMakeLists.txt  global.cpp  global.h  pin.h  platform.h
src/pixel/devices/: esp32.h  neopixel.h
src/pixel/display/: CMakeLists.txt  display.cpp  display.h
src/pixel/logger/: CMakeLists.txt  logger.cpp
src/pixel/main/: CMakeLists.txt  pixel.cpp
src/pixel/utility/: CMakeLists.txt  barrier.cpp  barrier.h  interrupt.cpp  interrupt.h  logger.cpp  logger.h  task.cpp  task.h
